--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,21 @@
-<head>
-</head>
-
-<body>
-  <div id="reactEntry"></div>
-
-  <!-- Attach React components -->
-  <script type="text/javascript" src="{{ url_for('static', filename='bundle.js') }}"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>RubberDucky</title>
+     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <style>
+      body,html {
+        margin: 0;
+        height: 100%;
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id='reactEntry' style="height: 100%; width: 100%;">
+    </div>
+    <script type="text/javascript" src="/static/bundle.js"></script>
+  </body>
+</html>
